# sdks

./: README.md
.github/workflows/: elixir-sdk-ci.yml  flutter-sdk-ci.yml  release-elixir-sdk.yml  release-flutter-sdk.yml  release-php-sdk.yml  release-ruby-sdk.yml  release-rust-sdk.yml  release-swift-sdk.yml  ruby-sdk-ci.yml  rust-sdk-ci.yml  swift-sdk-ci.yml  sync-php-sdk.yml  sync-swift-sdk.yml
dotnet/: Buble.Sdk.sln  LICENSE  README.md
dotnet/docs/: technical-design.md
elixir/: .formatter.exs  .gitignore  CHANGELOG.md  LICENSE  README.md  mix.exs
elixir/examples/: chat.exs  text_to_image.exs
elixir/lib/: buble.ex
elixir/test/: test_helper.exs
flutter/: CHANGELOG.md  README.md  pubspec.yaml
flutter/example/: README.md  app_generation.dart  chat.dart  text_to_image.dart  text_to_video.dart
flutter/lib/: buble.dart  buble_io.dart
flutter/test/: apps_test.dart  chat_test.dart  client_test.dart  files_test.dart  generations_test.dart  test_http_client.dart
flutter/tool/: live_smoke.dart
go/: README.md  apps.go  apps_test.go  chat.go  chat_test.go  client.go  client_test.go  doc.go  errors.go  files.go  files_internal.go  files_test.go  generations.go  generations_test.go  go.mod  media_models.go  option.go  request.go  stream.go  types.go
java/: README.md  pom.xml
npm/: LICENSE  README.md  package.json  tsconfig.json
php/: .gitignore  .phpunit.result.cache  README.md  composer.json  phpcs.xml  phpunit.xml.dist
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/docs/: technical-design.md
python/examples/: anthropic_messages.py  app_generation.py  gemini_generate.py  image_to_image.py  openai_chat.py  text_to_image.py  text_to_video.py
python/scripts/: live_smoke.py
python/src/buble_ai/: __init__.py  _client.py  _errors.py  _files.py  _http.py  _streaming.py
python/src/buble_ai/resources/: __init__.py  apps.py  chat.py  files.py  generations.py  media_models.py
python/src/buble_ai/types/: __init__.py  apps.py  chat.py  common.py  files.py  generations.py  media.py
python/tests/: test_chat.py  test_client.py  test_files.py  test_generations.py
ruby/: .gitignore  .rubocop.yml  README.md  Rakefile  buble.gemspec
rust/: Cargo.toml  README.md
rust/docs/: technical-design.md
rust/examples/: anthropic_messages.rs  app_generation.rs  gemini_generate.rs  image_to_image.rs  live_smoke.rs  openai_chat.rs  text_to_image.rs  text_to_video.rs
rust/src/: apps.rs  chat.rs  client.rs  config.rs  error.rs  files.rs  generations.rs  http.rs  lib.rs  media_models.rs  request.rs  streaming.rs  types.rs
rust/tests/: apps_test.rs  chat_test.rs  client_test.rs  files_test.rs  generations_test.rs
swift/: .gitignore  Package.swift  README.md
(+306 files in other folders)
