[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "buble-ai"
version = "0.1.0"
description = "Official Python SDK for the Buble AI media generation, app workflow, and chat API."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Buble" }
]
keywords = [
  "buble",
  "buble-ai",
  "ai",
  "sdk",
  "api-client",
  "image-generation",
  "video-generation",
  "chat"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "httpx>=0.27,<1"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "twine>=5"
]

[project.urls]
Homepage = "https://buble.ai"
Documentation = "https://buble.ai/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/buble_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

