[package]
name = "buble"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
description = "Official Rust SDK for the Buble public API."
homepage = "https://buble.ai/"
repository = "https://github.com/bublehq/sdks"
documentation = "https://docs.rs/buble"
readme = "README.md"
keywords = ["buble", "ai", "image-generation", "video-generation", "chat"]
categories = ["api-bindings", "web-programming::http-client"]
include = [
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
  "docs/**/*",
  "README.md",
  "LICENSE",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
mime_guess = "2"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "time"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
